--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: 'en-US' }}">
 <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-B9LY1F4LBL"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-B9LY1F4LBL');
-</script>
+<!--goatcounter analytics-->
+<script data-goatcounter="https://jakelacaze.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
