--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,6 +13,7 @@ layout: default
       {% endif %}
     </header><!-- .post-header -->
     <div class="post-content">
+{% toc %}
       {{content}}
     </div><!-- .post-content -->
   </article><!-- .post -->
