--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,14 @@
 <footer class="site-footer">
   <div class="offsite-links">
-    {% if site.footer.has_social %}
+  <!--  {% if site.footer.has_social %}
       {% include social.html %}
-    {% endif %}
+    {% endif %} -->
+<a href="/feed.xml">RSS</a>
+<a href="mailto:contact@jakelacaze.com">Contact</a>
+<a href="https://buymeacoffee.com/jakelacaze">Support</a>
+<a href="https://github.com/jakel1828">GitHub</a>
+<a href="https://bsky.app/profile/jakelacaze.com">Bluesky</a>
+<a href="https://www.linkedin.com/in/jakelacaze">LinkedIn</a>
   </div><!-- .offsite-links -->
   <div class="footer-bottom">
     <div class="site-info">
