--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,8 +18,7 @@ layout: default
       {% endif %}
     </header><!-- .post-header -->
     <div class="post-content">
-{% toc %}
-      {{content}}
+{{ content | toc }}
     </div><!-- .post-content -->
     <div class="post-share">
       <span>Share:</span>
