--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,12 @@
 <!--goatcounter analytics-->
 <script data-goatcounter="https://jakelacaze.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
+<!-- OpenGraph -->
+<meta property="og:url" content="{{ page.url | absolute_url }}">
+<meta property="og:type" content="{% if page.type != null %}{{ page.type }}{% elsif page.layout == "post" %}article{% else %}website{% endif %}">
+<meta property="og:title" content="{{ page.title }}">
+<meta property="og:description" content="{{ site.description }}">
+<meta property="og:image" content="{% if page.image != null %}{{ page.image }}{% else %}/images/me.jpg{% endif %}">
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
