--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 <meta property="og:type" content="{% if page.type != null %}{{ page.type }}{% elsif page.layout == "post" %}article{% else %}website{% endif %}">
 <meta property="og:title" content="{{ page.title }}">
 <meta property="og:description" content="{{ site.description }}">
-<meta property="og:image" content="{% if page.image != null %}{{ page.image }}{% else %}/images/me.jpg{% endif %}">
+<meta property="og:image" content="{% if page.image != null %}{{ page.image }}{% else %}/images/logo.png{% endif %}">
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
