added support for Twitter meta tags

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,13 @@
 <meta property="og:title" content="{{ page.title }}">
 <meta property="og:description" content="{{ site.description }}">
 <meta property="og:image" content="{% if page.image != null %}{{ page.image }}{% else %}/images/logo.png{% endif %}">
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="jakelacaze.com">
+<meta property="twitter:url" content="https://jakelacaze.com">
+<meta name="twitter:title" content="Jake LaCaze">
+<meta name="twitter:description" content="Human-centered perspective as a service">
+<meta name="twitter:image" content="https://jakelacaze.com/images/logo.png">
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
