added youtube link to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,7 @@
 <a href="/feed.xml">RSS</a>
 <a href="mailto:contact@jakelacaze.com">Contact</a>
 <a href="https://buymeacoffee.com/jakelacaze">Support</a>
+<a href="https://www.youtube.com/@jakelacaze">YouTube</a>
 <a href="https://github.com/jakel1828">GitHub</a>
 <a href="https://bsky.app/profile/jakelacaze.com">Bluesky</a>
 <a href="https://www.linkedin.com/in/jakelacaze">LinkedIn</a>
